# NEXT

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaksignore  .mise.toml  .npmrc  .prettierignore  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  buf.gen.docker.yaml  buf.gen.yaml  buf.yaml  commitlint.config.cjs  docker-compose.yml  eslint.config.mjs  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  syncpack.config.cjs  tsconfig.base.json  turbo.json
.changeset/: README.md  config.json
.cursor/rules/: next-master-constitution.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: adr-proposal.md  architecture-change.md  config.yml  incident-report.md  technical-debt.md
.github/instructions/: adr-governance.instructions.md  copilot-execution-directive.instructions.md  copilot-go-backend-directive.instructions.md
.github/workflows/: ci.yml  image-build.yml  preview-env.yml  release.yml  security.yml  terraform-apply.yml  terraform-plan.yml
.husky/: commit-msg  pre-commit
ai/: README.md
ai/creator-affinity/: README.md  pyproject.toml
ai/creator-affinity/src/next_creator_affinity/: __init__.py
ai/creator-copilot/: README.md  pyproject.toml
ai/creator-copilot/src/next_copilot/: __init__.py
ai/discovery-models/: README.md  pyproject.toml
ai/discovery-models/src/next_discovery_models/: __init__.py
ai/embedding-pipelines/: README.md  pyproject.toml
ai/embedding-pipelines/src/next_embedding_pipelines/: __init__.py
ai/emotion-analysis/: README.md  pyproject.toml
ai/emotion-analysis/src/next_emotion_analysis/: __init__.py
ai/feed-intelligence/: README.md  pyproject.toml
ai/feed-intelligence/src/next_feed_intelligence/: __init__.py
ai/highlight-detection/: README.md  pyproject.toml
ai/highlight-detection/src/next_highlight_detection/: __init__.py
ai/interest-graph/: README.md  pyproject.toml
ai/interest-graph/src/next_interest_graph/: __init__.py
ai/moderation-models/: README.md  pyproject.toml
ai/moderation-models/src/next_moderation/: __init__.py
ai/multimodal-pipelines/: README.md  pyproject.toml
ai/multimodal-pipelines/src/next_multimodal/: __init__.py
ai/multimodal-tagging/: README.md  pyproject.toml
ai/ranking-models/: README.md  pyproject.toml
ai/ranking-models/src/next_ranking_models/: __init__.py
ai/recommendation-engine/: README.md  pyproject.toml
ai/recommendation-engine/src/next_recommendation/: __init__.py
ai/scene-detection/: README.md  pyproject.toml
ai/scene-detection/src/next_scene_detection/: __init__.py
ai/search-ranking/: README.md  pyproject.toml
ai/search-ranking/src/next_search_ranking/: __init__.py
ai/semantic-clustering/: README.md  pyproject.toml
ai/semantic-clustering/src/next_semantic_clustering/: __init__.py
ai/semantic-indexing/: README.md  pyproject.toml
ai/semantic-understanding/: README.md  pyproject.toml
ai/semantic-understanding/src/next_semantic/: __init__.py
ai/speech-transcription/: README.md  pyproject.toml
ai/speech-transcription/src/next_speech_transcription/: __init__.py
ai/vector-pipelines/: README.md  pyproject.toml
ai/vector-pipelines/indexer/: Cargo.toml
ai/vector-pipelines/indexer/src/: main.rs
ai/vector-pipelines/src/next_vector_pipelines/: __init__.py
ai/video-intelligence/: README.md  pyproject.toml
ai/video-intelligence/src/next_video_intelligence/: __init__.py
apps/: README.md
apps/account-center/: README.md  next.config.ts  package.json
apps/admin/: README.md  next.config.ts  package.json  vitest.config.ts
apps/auth-portal/: README.md  next.config.ts  package.json  tailwind.config.cjs  tsconfig.json
apps/immersive/: README.md  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/live-control-room/: README.md  package.json  tsconfig.json
apps/mobile/: README.md  app.config.ts  package.json  tsconfig.json
apps/studio/: README.md  next.config.ts  package.json  tailwind.config.cjs  tsconfig.json
apps/studio-media-console/: README.md  next.config.ts  package.json
apps/tv/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: README.md  next.config.ts  package.json  tailwind.config.cjs  tsconfig.json  vitest.config.ts
config/: .env.example
docs/: ARCHITECTURE.md  AUDIT_CLAUDE.md  AUDIT_CODEX.md  AUDIT_COPILOT.md  AUDIT_Composer.md  GIT_AUDIT_CLAUDE.md  GIT_AUDIT_CODEX.md  GIT_AUDIT_COPILOT.md  GIT_AUDIT_Composer.md  IDENTITY_ARCHITECTURE.md  MEDIA_ARCHITECTURE.md  PHASE_11_EXIT_AUDIT_CLAUDE.md  PHASE_11_EXIT_AUDIT_CODEX.md  PHASE_11_EXIT_AUDIT_COPILOT.md  PHASE_11_EXIT_AUDIT_Composer.md  PHASE_11_FINAL_VERDICT.md  PHASE_12_INTEGRATION_PLAN.md  PHASE_12_INTEGRATION_REPORT.md  PHASE_13_DEVELOP_VALIDATION.md  PHASE_14_POST_PROMOTION_PLAN.md  PHASE_15A_INFRA_SECURITY.md  PHASE_15B_BUILD_RUNTIME.md  PHASE_15D_IMAGE_SECURITY.md  PHASE_15E_RUNTIME_ENTRYPOINTS.md  PHASE_15F_STABILIZED_FOUNDATION.md  PHASE_16A_CONTRACTS.md  PHASE_16B_AUTH_RUNTIME.md  PHASE_16_SERVICE_WIRING.md  api-architecture.md  database-architecture.md  disaster-recovery.md  event-architecture.md  observability.md  onboarding.md  production-deployment.md  scaling-strategy.md  security.md  service-layout-exceptions.md  system-layers.md
docs/adr/: 0001-monorepo-tooling.md  0002-cloud-target.md  0003-service-mesh.md  0004-gitops-argocd.md  0005-vector-database.md  0006-api-architecture.md  0008-event-bus.md  (+38 more)
infrastructure/: README.md
scripts/: README.md  bootstrap.sh  go-work-run.mjs
services/: README.md
services/live-service/ingest/: Cargo.toml
services/live-service/ingest/src/: main.rs
services/media-service/transcoder/: Cargo.toml
services/media-service/transcoder/src/: main.rs
services/recommendation-service/ranker/: Cargo.toml
services/recommendation-service/ranker/src/: main.rs
tests/: README.md
tooling/: README.md
(+766 files in other folders)
