[project]
name = "next-creator-affinity"
version = "0.1.0"
description = "Creator-affinity modeling + creator-fairness calibration."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "ray[default,data]>=2.38.0",
    "neo4j>=5.25.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.17.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_creator_affinity"]

[tool.uv.sources]
next-telemetry = { workspace = true }
