[project]
name = "next-creator-copilot"
version = "0.1.0"
description = "Creator LLM assistant. vLLM-served, RAG-augmented, policy-guarded."
requires-python = ">=3.12"
dependencies = ["vllm>=0.6.3", "torch>=2.5.0", "transformers>=4.46.0", "qdrant-client>=1.12.0", "next-telemetry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_copilot"]

[tool.uv.sources]
next-telemetry = { workspace = true }
