[project]
name = "next-discovery-models"
version = "0.1.0"
description = "Discovery-mode inference + controlled-serendipity models."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "ray[default,data,train]>=2.38.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.17.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_discovery_models"]

[tool.uv.sources]
next-telemetry = { workspace = true }
