[project]
name = "next-embedding-pipelines"
version = "0.1.0"
description = "Embedding generation + vector-store maintenance for recommendation."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "ray[default,data]>=2.38.0",
    "qdrant-client>=1.12.0",
    "numpy>=2.1.0",
    "mlflow>=2.17.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_embedding_pipelines"]

[tool.uv.sources]
next-telemetry = { workspace = true }
