[project]
name = "next-highlight-detection"
version = "0.1.0"
description = "Highlight + key-moment scoring for clip generation."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "ray[default,data]>=2.38.0",
    "lightgbm>=4.5.0",
    "numpy>=2.1.0",
    "mlflow>=2.17.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_highlight_detection"]

[tool.uv.sources]
next-telemetry = { workspace = true }
