[project]
name = "next-interest-graph"
version = "0.1.0"
description = "Interest-graph construction, embedding, and affinity decay."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "ray[default,data]>=2.38.0",
    "neo4j>=5.25.0",
    "networkx>=3.4.0",
    "numpy>=2.1.0",
    "mlflow>=2.17.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_interest_graph"]

[tool.uv.sources]
next-telemetry = { workspace = true }
