[project]
name = "next-moderation-models"
version = "0.1.0"
description = "Trust + safety classifiers."
requires-python = ">=3.12"
dependencies = ["torch>=2.5.0", "transformers>=4.46.0", "ray[default]>=2.38.0", "mlflow>=2.17.0", "next-telemetry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_moderation"]

[tool.uv.sources]
next-telemetry = { workspace = true }
