[project]
name = "next-multimodal-pipelines"
version = "0.1.0"
description = "Joint text+vision+audio pipelines."
requires-python = ">=3.12"
dependencies = ["torch>=2.5.0", "ray[default,data]>=2.38.0", "next-telemetry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_multimodal"]

[tool.uv.sources]
next-telemetry = { workspace = true }
