[project]
name = "next-ranking-models"
version = "0.1.0"
description = "Lightweight scorer + semantic cross-encoder training for ranking."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "ray[default,data,train]>=2.38.0",
    "lightgbm>=4.5.0",
    "onnx>=1.17.0",
    "numpy>=2.1.0",
    "mlflow>=2.17.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_ranking_models"]

[tool.uv.sources]
next-telemetry = { workspace = true }
