[project]
name = "next-recommendation-engine"
version = "0.1.0"
description = "Two-tower retrieval + cross-encoder ranker training and serving."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "ray[default,train]>=2.38.0",
    "mlflow>=2.17.0",
    "qdrant-client>=1.12.0",
    "pandas>=2.2.3",
    "numpy>=2.1.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_recommendation"]

[tool.uv.sources]
next-telemetry = { workspace = true }
