[project]
name = "next-scene-detection"
version = "0.1.0"
description = "Shot + scene boundary detection for the NEXT media pipeline."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "ray[default,data]>=2.38.0",
    "ffmpeg-python>=0.2.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.17.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_scene_detection"]

[tool.uv.sources]
next-telemetry = { workspace = true }
