[project]
name = "next-search-ranking"
version = "0.1.0"
description = "Learning-to-rank for search."
requires-python = ">=3.12"
dependencies = ["torch>=2.5.0", "lightgbm>=4.5.0", "ray[default]>=2.38.0", "mlflow>=2.17.0", "next-telemetry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_search_ranking"]

[tool.uv.sources]
next-telemetry = { workspace = true }
