[project]
name = "next-vector-pipelines"
version = "0.1.0"
description = "Embedding generation + Qdrant index maintenance pipelines."
requires-python = ">=3.12"
dependencies = ["ray[default,data]>=2.38.0", "qdrant-client>=1.12.0", "next-telemetry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_vector_pipelines"]

[tool.uv.sources]
next-telemetry = { workspace = true }
