[project]
name = "next-video-intelligence"
version = "0.1.0"
description = "Video understanding pipeline: shots, ASR, OCR, tagging, detection."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "ray[default,data]>=2.38.0",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20240930",
    "paddleocr>=2.9.0",
    "ultralytics>=8.3.0",
    "mlflow>=2.17.0",
    "next-telemetry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/next_video_intelligence"]

[tool.uv.sources]
next-telemetry = { workspace = true }
