[package]
name = "next-recommendation-ranker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cross-encoder ranker for NEXT recommendation. ONNX Runtime + CUDA."

[[bin]]
name = "ranker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
next-telemetry = { path = "../../../packages/rust/telemetry" }
next-proto = { path = "../../../packages/rust/proto" }
ort = { version = "2.0.0-rc.8", features = ["cuda"] }
